# water

./: .main.cpp.swp  game-unity.cpp  main  main.cpp  run.bat  run.sh  shader.glsl  shader.spv  vulkat-test.cpp
assets/models/: convert-gltf.py  convert-obj.py  cube.mesh  parse-gltf.py  quad.mesh
assets/textures/: player.png~  star.png~
glue/android/: CMakeLists.txt
glue/apple/ios/: AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.m  main.m  pointer-state.h
glue/apple/macos/: AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.m  main.m
glue/apple/shared/: Renderer.h  Renderer.m  apple-glue.h
include/engine/: 3d-no-driver.h  AndroidOut.h  array.h  assetManager.h  audio.h  engine.h  geometry.h  gl3d.h  gui.h  gvk.h  mt3d.h  renderer2d.h  socket.h  strings.h  text.h
include/glad/: gl.h  glx.h  wgl.h
include/stb/: stb_vorbis.h
lib/engine/: 3d-no-driver.cpp  array.cpp  audio-apple.cpp  audio-linux.cpp  audio-windows.cpp  audio.cpp  engine-apple.cpp  engine-linux.cpp  engine-unity-android.cpp  engine-unity-linux.cpp  engine-windows.cpp  engine.cpp  files.cpp  geometry.cpp  gl3d.cpp  gui.cpp  gvk.cpp  mt3d.cpp  renderer2d-metal.cpp  renderer2d.cpp  shaders.cpp  socket.cpp  strings.cpp  text.cpp  time.cpp  wav-reader.c
lib/engine/android/: AndroidOut.cpp  audio.cpp  main.cpp
lib/miniaudio/: miniaudio.c
shaders/metal/renderer2d/: 2dshader.metal
shaders/opengl/: convert-to-gles.sh  process-background-fragment-shader.glsl  process-background-remove-noise-fragment-shader.glsl  process-background-vertex-shader.glsl  water-fragment-shader.glsl
shaders/opengl/renderer2d/: color-fragment-shader.glsl  color-vertex-shader.glsl  icon-fragment-shader.glsl  (+4 more)
(+1 files in other folders)
